--- a/data/Socials.toml
+++ b/data/Socials.toml
@@ -14,28 +14,21 @@
 
 [[socials]]
     id = "email"
-    url = "mailto:reuixiy@gmail.com"
+    url = "mailto:m4814@qq.com"
     icon = "envelope"
     title = "Email"
     weight = 2
 
 [[socials]]
     id = "github"
-    url = "https://github.com/reuixiy"
+    url = "https://github.com/kiwi4814"
     icon = "github"
     title = "GitHub"
     weight = 3
 
 [[socials]]
-    id = "twitter"
-    url = "https://twitter.com/reuixiy"
-    icon = "twitter"
-    title = "Twitter"
-    weight = 4
-
-[[socials]]
     id = "telegram"
-    url = "https://t.me/yixiuer"
+    url = "https://t.me/kiwi4814"
     icon = "telegram"
     title = "Telegram"
-    weight = 5
+    weight = 4
